feat: added semeter lab paper from nina 2025

--- a/index.qmd
+++ b/index.qmd
@@ -36,7 +36,7 @@ On the practical side, I'm interested in developing fast, efficient, and scalabl
 
 4. **(BU, 2023):** I worked on the NASA Life on Mars initiative at Hariri. I simulated EM propagation through Mars' ionosphere and developed models for detecting features on GNSS maps.
 
-5. **(BU, 2024):** During the [April 8](https://en.wikipedia.org/wiki/Solar_eclipse_of_April_8,_2024) full solar eclipse, the Semeter Lab members went around New England and into Canada to record GNSS data from consumer cell phones. I helped take observations at MIT and Ogunquit, ME. A [poster](https://cedarscience.org/sites/default/files/2024-posters/IRRI-8-Nina-ServanSchreiber.pdf) was presented by [Nina Servan-Schreiber](https://www.linkedin.com/in/nina-servan-schreiber-68834321b) at the [2024 CEDAR Workshop](https://cedarscience.org/2024-workshop).
+5. **(BU, 2024):** During the [April 8](https://en.wikipedia.org/wiki/Solar_eclipse_of_April_8,_2024) full solar eclipse, the Semeter Lab members went around New England and into Canada to record GNSS data from consumer cell phones. I helped take observations at MIT and Ogunquit, ME. A [poster](https://cedarscience.org/sites/default/files/2024-posters/IRRI-8-Nina-ServanSchreiber.pdf) was presented by [Nina Servan-Schreiber](https://www.linkedin.com/in/nina-servan-schreiber-68834321b) at the [2024 CEDAR Workshop](https://cedarscience.org/2024-workshop). The work is now a [paper](https://essopenarchive.org/users/1006611/articles/1370630-smartphone-carrier-phase-tec-a-study-across-ionospheric-spatio-temporal-scales). 
 
 6. **(GaTech, 2024):** A VLM-LLM integrated end-to-end [system](https://github.com/ksd3/updatedWeb) that generates insurance recommendation reports using a combination of tenant complaints and photos taken by an insurance agent for [Hacklytics](https://hacklytics.io) 2024.
 
