Update cv.qmd and index.qmd

--- a/cv/cv.qmd
+++ b/cv/cv.qmd
@@ -20,7 +20,7 @@ For academic CV templates, check:
 
 # Kshitij Duraphe
 
-email\@example.com |
+kshitijduraphe5@gmail.com |
 ksd3.github.io |
 github.com/ksd3
 
